--- a/css/index.css
+++ b/css/index.css
@@ -58,6 +58,8 @@ body {
 
 fieldset {
   border: none;
+  width: 90%;
+  margin: 0 auto;
 }
 
 
@@ -259,14 +261,22 @@ footer {
     width: 60%;
   }
 
-  #zipcode {
-    width: 30%;
-  }
-
   #top-border,
   #bottom-border,
-  #form-border  {
-    width: 100%;
+  #form-border {
+    width: 90%;
+    margin: 0 auto .5rem;
+    border-bottom: 2px solid #4682B4;
+    display: block;
+  }
+
+  #top-border {
+    border-bottom: 6px solid #4682b4;
+  }
+
+
+  #zipcode {
+    width: 30%;
   }
 
 }
